style(department page): fix title align add Container

--- a/src/assets/scss/global.scss
+++ b/src/assets/scss/global.scss
@@ -10,7 +10,7 @@ body {
 }
 
 main {
-  min-height: 50vh;
+  min-height: 80vh;
   margin-top: 110px;
   @media only screen and (orientation: landscape) {
     margin-top: 76px;
