--- a/src/components/Container/Container.module.scss
+++ b/src/components/Container/Container.module.scss
@@ -1,6 +1,6 @@
 .Container {
   margin: 0 auto;
-  width: 100vw;
+
   max-width: 1280px;
 
   padding: 0 0.5rem;
