--- a/src/components/departments/DepartmentPage/DepartmentPage.module.scss
+++ b/src/components/departments/DepartmentPage/DepartmentPage.module.scss
@@ -1,24 +1,34 @@
+.departmentSection {
+  @extend%aligncenter;
+}
 .contentWrapper {
+  width: 100%;
   min-height: 40vh;
   padding-top: 24px;
-  display: flex;
+  @extend%aligncenter;
   flex-direction: column;
   gap: 12px;
+  h2 {
+    align-self: flex-start;
+  }
   @media screen and (min-width: 768px) {
+    max-width: 728px;
     gap: 16px;
   }
   @media screen and (min-width: 1240px) {
+    max-width: 1180px;
     gap: 30px;
   }
 }
 .wrapper {
   display: flex;
   flex-direction: column;
-  // gap: 10px;
-  // @media screen and (min-width: 768px) {
-  //   gap: 24px;
-  // }
-  // @media screen and (min-width: 1240px) {
-  //   gap: 120px;
-  // }
+  gap: 10px;
+  width: 100%;
+  @include tablet {
+    gap: 24px;
+  }
+  @include desktop {
+    gap: 120px;
+  }
 }
